--- a/app/views/sections/_edit_content.html.erb
+++ b/app/views/sections/_edit_content.html.erb
@@ -3,6 +3,7 @@
 <div class="small-9 columns content-column">
   <div class="content">
     <a href="#" data-reveal-id="edit-section"><%= @section.title %></a>
+    <%= link_to "Delete Section", course_section_path, method: :delete %>
 
     <%= render 'edit_section_form' %>
     <div id="addContent">
