--- a/app/assets/javascripts/templates/contents.hbs
+++ b/app/assets/javascripts/templates/contents.hbs
@@ -1,9 +1,10 @@
 <div class"content">
   <div>{{source_url}}</div>
   <div>{{text}}</div>
+  <a data-method="delete" href="{{edit_content_path}}{{id}}.json" id="delete_content_{{id}}"  rel="nofollow">Delete Content</a>
   <a href="#" data-reveal-id="edit-content-{{id}}">edit</a>
   <div id="edit-content-{{id}}" class="reveal-modal" data-reveal>
-    <form id="edit_content_form_{{id}}" action="{{edit_content_path}}" method="post">
+    <form id="edit_content_form_{{id}}" action="{{edit_content_path}}{{id}}.json" method="post">
       <input id="update_content_source_url_{{id}}" name="content[source_url]" placeholder="Resource link" type="text">
       <textarea id="update_content_text_{{id}}" name="content[text]" placeholder="How did you use this resource?"></textarea>
       <input id="update_content_button" class="button large" name="commit" type="submit" value="update">
@@ -11,3 +12,4 @@
     <a class="close-reveal-modal">&#215;</a>
   </div>
 </div>
+
