--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,22 +1,40 @@
-<h2>Sign up</h2>
+<div id="sign_up">
+<h3>Sign up</h3><br>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :name %><br />
-  <%= f.text_field :name, :autofocus => true %></div>
+  <div>
+  <%= f.text_field :name, :autofocus => true, :placeholder => "Name" %></div>
 
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email%></div>
+  <div>
+  <%= f.email_field :email, :placeholder => "Email"%></div>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+  <div>
+  <%= f.password_field :password, :placeholder => "Password" %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+  <div>
+  <%= f.password_field :password_confirmation, :placeholder => "Confirm Password" %></div>
 
   <div><%= f.submit "Sign up" %></div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+</div>
+
+<style>
+#sign_up{
+  margin-left: auto;
+  margin-right: auto;
+text-align: center;
+width:50%;
+}
+
+input[type="submit"] {
+border: none;
+background: lightblue;
+padding: 10px;
+font-size: 70%;
+color: grey;
+}
+</style>
