--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -25,27 +25,49 @@
         </li>
         <li class="divider"></li>
         <% if !signed_in? %>    
-        <li class="has-dropdown"><a href="#">Signin</a>
+        <li class="has-dropdown"><a href="#">Sign in</a>
             <ul class="dropdown">
             <%= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f| %>  
-                <li><label>email</label></li>
-                <li><%= f.email_field :email, :autofocus => true %></li>
-                <li><label>password</label></li>
-                <li><%= f.password_field :password %></li>
-                <% if devise_mapping.rememberable? -%>
-                  <li><%= f.check_box :remember_me %> <%= f.label :remember_me %></li>
-                <% end -%>
-                <li><div><%= f.submit "Sign in" %></div></li>
+                <li><%= f.email_field :email, :autofocus => true, :placeholder => "Email" %></li>
+                <li><%= f.password_field :password, :placeholder => "Password" %></li>           
+                <li><%= f.submit "Sign in", :id => "drop_submit" %></li>
             <%end%>
             </ul>
         </li>
         <%end%>
         <% if signed_in? %>
-            <li><%= link_to "Signout", destroy_user_session_path, method: :delete %></li>
+            <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
         <%else%>    
             <li class="divider"></li>
-            <li><%= link_to "Signup", new_user_registration_path %></li>
+            <li><%= link_to "Sign up", new_user_registration_path %></li>
         <%end%>
     </ul>
     </section>
 </nav>
+
+<style>
+
+.dropdown{
+line-height: 80%;
+
+}
+
+#drop_submit{
+border: none;
+background: lightblue;
+padding: 10px;
+font-size: 60%;
+color: grey;
+}
+
+.top-bar-section .dropdown li {
+padding:20px;
+background: white;
+width:190%;
+}
+
+.top-bar input, .top-bar{
+font-size: 80%;
+}
+
+</style>
