--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -8,17 +8,20 @@ with online resources<br>
 <%= render 'index_content' %>
 </div>
 
-
+<a href="/courses">
 <div id="boxes_holder">
   <div class="box">
-    <%= image_tag("file02_128.png")%>
+    <a href="/browse"><%= image_tag("file02_128.png")%></a>
     create
   </div>
+</a>  
 
-  <div class="box">
-    <%= image_tag("magnifying-glass_128.png")%>
-    browse
-  </div>
+<a href="/browse">
+    <div class="box">
+      <%= image_tag("magnifying-glass_128.png")%>
+      browse
+    </div>
+</a>
 </div>
 
 <style>
@@ -39,8 +42,8 @@ font-size: 120%;
 margin-bottom: 50px;
 }
 
-.toggle_button img{
-width: 70px;
+.toggle_button:hover{
+color: lightblue;
 }
 
 #index_partial {
