--- a/app/assets/javascripts/templates/contents.hbs
+++ b/app/assets/javascripts/templates/contents.hbs
@@ -1,15 +1,6 @@
-<div class"content">
+<div class="content">
   <div>{{source_url}}</div>
   <div>{{text}}</div>
   <a data-method="delete" href="{{edit_content_path}}{{id}}.json" id="delete_content_{{id}}"  rel="nofollow">Delete Content</a>
-  <a href="#" data-reveal-id="edit-content-{{id}}">edit</a>
-  <div id="edit-content-{{id}}" class="reveal-modal" data-reveal>
-    <form id="edit_content_form_{{id}}" action="{{edit_content_path}}{{id}}.json" method="post">
-      <input id="update_content_source_url_{{id}}" name="content[source_url]" placeholder="Resource link" type="text">
-      <textarea id="update_content_text_{{id}}" name="content[text]" placeholder="How did you use this resource?"></textarea>
-      <input id="update_content_button" class="button large" name="commit" type="submit" value="update">
-    </form>
-    <a class="close-reveal-modal">&#215;</a>
-  </div>
+  <a href="#" class="edit_link" data-id="{{id}}" data-reveal-id="edit-content">edit</a>
 </div>
-
