--- a/app/assets/stylesheets/sections.scss
+++ b/app/assets/stylesheets/sections.scss
@@ -1,8 +1,19 @@
+$input-blue: #96AEC0;
+$course-title-green-blue: #72D5DD;
+$link-blue: #347DAC;
+
+///////////////////////////////////
+////////////////////////////Sidebar
+///////////////////////////////////
+.row {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: initial;
+}
+
 .content-view {
   position: relative;
   height: 100%;
-  width: 100%;
-  margin-bottom: 0px;
 }
 
 .sidebar-column {
@@ -13,21 +24,16 @@
 
 .sidebar  {
   background: white;
-  height: 100%;
+  min-height: 100%;
   overflow: auto;
 
 }
 
 .sidebar-title  {
   padding: 16px 0px 16px 32px;
+  background-color: $course-title-green-blue;
 }
 
-.row {
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: initial;
-}
 
 .sidebar-course-title {
   margin-bottom: -5px;
@@ -49,12 +55,89 @@
   color: black
 }
 
+.side-nav {
+  padding-top: 0;
+}
+
 .fi-widget {
   font-size: 30px;
   text-align: right;
+  color: white;
 }
 
 .fi-check {
   font-size: 30px;
   text-align: right;
+  color: white;
 }
+
+.center-padding {
+  padding: 50px 100px 50px 100px;
+}
+
+#addSection input[type="submit"] {
+  display: none;
+}
+
+#addSection input[type="text"]  {
+  border: 0;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0);
+  color: $input-blue;
+  margin: 24px 12px 24px 32px;
+
+}
+
+#addSection input[type="text"]:focus  {
+  background-color: white;
+  }
+
+::-webkit-input-placeholder { /* WebKit browsers */
+    color: $input-blue;
+    font: inheret;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+    color: $input-blue;
+    font: inheret;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+    color: $input-blue;
+    font: inheret;
+}
+:-ms-input-placeholder { /* Internet Explorer 10+ */
+    color: $input-blue;
+    font: inheret;
+}
+
+///////////////////////////////////
+////////////////////////////Content
+///////////////////////////////////
+
+.content {
+  text-align: center;
+}
+
+.edit-content-title {
+  padding: 20px;
+  text-align: center;
+  font-size: 1.6875rem;
+  color: $link-blue
+}
+
+
+#addContent input[type="text"]  {
+  border-right: 1px;
+  border-top: 1px;
+  border-left: 1px;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0);
+}
+
+#addContent textarea  {
+  border-right: 1px;
+  border-top: 1px;
+  border-left: 1px;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0);
+}
+
+#addContent input[type="text"]:focus  {
+  background-color: white;
+  }
