delete method working, but need to reload

--- a/app/assets/javascripts/templates/contents.hbs
+++ b/app/assets/javascripts/templates/contents.hbs
@@ -1,6 +1,6 @@
-<div class="content">
+<div id ="content_div" class="content">
   <div>{{source_url}}</div>
   <div>{{text}}</div>
-  <a data-method="delete" href="{{edit_content_path}}{{id}}.json" id="delete_content_{{id}}"  rel="nofollow">Delete Content</a>
+  <a href="#" id="delete_link" data-id="{{id}}">Delete</a>
   <a href="#" class="edit_link" data-id="{{id}}" data-reveal-id="edit-content">edit</a>
 </div>
