styled edit content

--- a/app/assets/javascripts/templates/contents.hbs
+++ b/app/assets/javascripts/templates/contents.hbs
@@ -1,7 +1,7 @@
 <div class"content">
+  <a href="#" data-reveal-id="edit-content-{{id}}"><div class="edit-widget"><i class="fi-widget"></i></div></a>
   <div>{{source_url}}</div>
   <div>{{text}}</div>
-  <a href="#" data-reveal-id="edit-content-{{id}}">edit</a>
   <div id="edit-content-{{id}}" class="reveal-modal" data-reveal>
     <form id="edit_content_form" action="{{content_path}}" method="post">
       <input id="update_content_source_url" name="content[source_url]" placeholder="Resource link" type="text">
