--- a/app/views/sections/_edit_content.html.erb
+++ b/app/views/sections/_edit_content.html.erb
@@ -6,12 +6,19 @@
       <a href="#" data-reveal-id="edit-section"><%= @section.title %></a>
     </div>
     <%= render 'edit_section_form' %>
-    <div class="small-6 small-centered columns">
-    <div id="addContent">
+
+    <div class="row">
+      <div class="small-6 small-centered columns">
+        <div id="addContent"></div>
+      </div>
     </div>
+
+    <div class="row">
+      <div class="small-6 small-centered columns">
+        <div id="contents"></div> 
+      </div>
     </div>
-    <div id="contents">
-    </div> 
+
   </div>
 </div>
 
