--- a/app/assets/stylesheets/sections.scss
+++ b/app/assets/stylesheets/sections.scss
@@ -1,6 +1,7 @@
 $input-blue: #96AEC0;
 $course-title-green-blue: #72D5DD;
 $link-blue: #347DAC;
+$button-blue: #72D5DD;
 
 ///////////////////////////////////
 ////////////////////////////Sidebar
@@ -123,7 +124,6 @@ $link-blue: #347DAC;
   color: $link-blue
 }
 
-
 #addContent input[type="text"]  {
   border-right: 1px;
   border-top: 1px;
@@ -138,6 +138,38 @@ $link-blue: #347DAC;
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0);
 }
 
+#addContent textarea:focus  {
+  background-color: white;
+}
+
 #addContent input[type="text"]:focus  {
   background-color: white;
-  }
+}
+
+#test > input.button.small  {
+  background-color: $link-blue;
+}
+
+#contents {
+  text-align: left;
+}
+
+#contents > div > div:nth-child(2) {
+  font-weight: 500;
+  padding: 0 0 10px 0;
+  margin-top: -20px;
+}
+
+#contents > div > div:nth-child(3) {
+  padding: 0 0 30px 0;
+}
+
+#contents .fi-widget {
+  font-size: 30px;
+  color: $link-blue;
+}
+
+.edit-widget  {
+  text-align: right;
+  padding-right: 10px;
+}
