--- a/app/assets/stylesheets/sections.scss
+++ b/app/assets/stylesheets/sections.scss
@@ -1,7 +1,12 @@
+///////////////////////////////////
+///////////////////Global Variables
+///////////////////////////////////
 $input-blue: #96AEC0;
 $course-title-green-blue: #72D5DD;
 $link-blue: #347DAC;
 $button-blue: #72D5DD;
+$grey-blue: #96AEC0;
+
 
 ///////////////////////////////////
 ////////////////////////////Sidebar
