--- a/app/assets/stylesheets/content.scss
+++ b/app/assets/stylesheets/content.scss
@@ -6,8 +6,10 @@ $course-title-green-blue: #72D5DD;
 $link-blue: #347DAC;
 $button-blue: #72D5DD;
 $grey-blue: #96AEC0;
+
+
 ///////////////////////////////////
-///////////////////////////////////
+///////////////////////Content show
 ///////////////////////////////////
 
 .content-column {
@@ -117,4 +119,85 @@ footer  {
   padding: 5px 32px; 
 }
 
+///////////////////////////////////
+///////////////////////Content edit
+///////////////////////////////////
+
+.content {
+  text-align: center;
+}
+
+.edit-content-title {
+  padding: 20px;
+  text-align: center;
+  font-size: 1.6875rem;
+  color: $link-blue
+}
+
+#addContent input[type="text"]  {
+  border-right: 1px;
+  border-top: 1px;
+  border-left: 1px;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0);
+}
+
+#addContent textarea  {
+  border-right: 1px;
+  border-top: 1px;
+  border-left: 1px;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0);
+}
+
+#addContent textarea:focus  {
+  background-color: white;
+}
+
+#addContent input[type="text"]:focus  {
+  background-color: white;
+}
+
+#test > input.button.small  {
+  background-color: $link-blue;
+}
+
+#content_div {
+  text-align: left;
+
+}
+
+#content_div > div:nth-child(1) {
+  padding: 0 0 25px 0;
+}
+
+#contents > div > div:nth-child(2) {
+  font-weight: 500;
+  margin-top: -20px;
+}
+
+#content_div a {
+  text-align: center;
+}
+
+
+#contents .fi-widget {
+  font-size: 30px;
+  color: $link-blue;
+  padding: 0 5px 0 5px;
+}
+
+#contents .fi-x-circle {
+  font-size: 30px;
+  color: #C1877D;
+  padding: 0 5px 0 5px;
+}
+
+
+.edit-delete-icons  {
+  text-align: right;
+}
+
+#content_div > div:nth-child(3) {
+  padding: 0 0 12px 0;
+  margin-top: -10px;
+}
 
