changed index method in sites controller to only show 3 courses

--- a/app/views/sites/_index_content.html.erb
+++ b/app/views/sites/_index_content.html.erb
@@ -3,7 +3,8 @@
 <!-- a blank array for pushing each word count number into -->
 <% array = []%>
 <ol>
-  <% @contents.each do |f| %>
+    <% i =0 %>
+  <% @contents.each do |content| %>
     <li id="content_list"><div id="content_comment"><%= f.text %></div></li>
     <% url = f.source_url 
         response = Typhoeus.get("https://www.readability.com/api/content/v1/parser?url=#{url}/&token=2e371692e3f7e9fd04045befb46b38364db35326")      
