removed manifest file for precompilation

--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -5,7 +5,7 @@ with online resources<br>
 <div class="toggle_button">(see example)</div>
 
 <div id="index_partial">
-<%#= render 'index_content' %>
+<%= render 'index_content' %>
 </div>
 
 
