--- a/app/views/sections/_edit_sidebar.html.erb
+++ b/app/views/sections/_edit_sidebar.html.erb
@@ -2,7 +2,7 @@
   <div class="sidebar">
 
     <div class="sidebar-title">
-      <div class="row">
+      <div class="row row-header">
         <div class="small-12 medium-9 columns">
           <h3 class="sidebar-course-title">
             <div class="course_cat_img"><%= image_tag(@category.img)%></div>
