--- a/app/assets/stylesheets/content.scss
+++ b/app/assets/stylesheets/content.scss
@@ -22,6 +22,7 @@ $grey-blue: #96AEC0;
   padding: 8px;
   height: 100%;
   overflow: auto;
+  box-shadow: rgba(0,0,0,.08) 0 1px 5px;
 }
 
 #content_comment {
