--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -1,5 +1,23 @@
+.max-row-height {
+  max-height: 100%;
+  position: relative;
+}
+
+.row-height {
+  height: 100%;
+}
+
+.min-row-height {
+  min-height: 100%;
+}
+
+.show-container {
+  background: white;
+  box-shadow: rgba(0,0,0,.08) 0 1px 5px;
+
+}
+
 .page-title{
-  text-align: center;
   padding: 40px 0 10px 0 ;
 }
 
@@ -9,7 +27,7 @@
 }
 
 .add-course a {
-  padding: 20px 20px 20px 20px;
+  padding: 20px 20px 20px 10px;
 }
 
 a > p {
@@ -18,4 +36,8 @@ color: black;
 
 .hidden {
   display: none;
+}
+
+.remove-sideways-scroll {
+  width: 100%
 }
