--- a/app/assets/stylesheets/sections.scss
+++ b/app/assets/stylesheets/sections.scss
@@ -32,6 +32,7 @@ $grey-blue: #96AEC0;
 .sidebar  {
   background: white;
   min-height: 100%;
+  box-shadow: rgba(0,0,0,.08) 0 1px 5px;
 }
 
 .sidebar-title  {
