--- a/app/views/sections/_edit_content.html.erb
+++ b/app/views/sections/_edit_content.html.erb
@@ -1,7 +1,7 @@
 
 
 <div class="small-9 columns content-column">
-  <div class="content">
+  <div class="content-container">
     <div class="edit-content-title" >
       <a href="#" data-reveal-id="edit-section"><%= @section.title %></a>
       <%= link_to "Delete Section", course_section_path, method: :delete %>
