--- a/app/views/sections/_edit_sidebar.html.erb
+++ b/app/views/sections/_edit_sidebar.html.erb
@@ -32,9 +32,28 @@
 
 
 <style>
-
 .course_cat_img img{
 width:60px;
 margin-bottom: 10px; 
 }
 </style>
+
+<script>
+$('#sections').sortable({
+    axis: 'y',    
+    update: function (event, ui) {
+        var data = $(this).sortable('serialize');
+        console.log(data);
+
+        $.ajax({
+            data: data,
+            type: 'GET',
+            dataType: 'json',
+            url: '/courses/:course_id/sections/:section_id/sorted',
+            success : function(data) {
+              console.log(data);
+            }
+        });
+    }
+});
+</script>
