removing signin drop down styling to see if it will make the drop down work in heroku

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -47,7 +47,7 @@
 
 <style>
 
-.dropdown{
+/*.dropdown{
 line-height: 80%;
 
 }
@@ -70,4 +70,4 @@ width:190%;
 font-size: 80%;
 }
 
-</style>
+</style>*/
