--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="devise">
 <h2>Change your password</h2>
 
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
@@ -14,3 +15,14 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+
+<style>
+input[type="submit"] {
+border: none;
+background: lightblue;
+padding: 10px;
+font-size: 70%;
+color: grey;
+}
+</style>
