--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div id="sign_up">
+<div class="devise">
 <h3>Sign up</h3><br>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
@@ -23,13 +23,6 @@
 </div>
 
 <style>
-#sign_up{
-  margin-left: auto;
-  margin-right: auto;
-text-align: center;
-width:50%;
-}
-
 input[type="submit"] {
 border: none;
 background: lightblue;
