modal to create course from everywhere, + more seed data

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,7 +1,8 @@
 <nav class = "top-bar" data-topbar>
     <ul class="title-area">
         <li class="name">
-             <h1><a href="#"><i class="fi-pencil"></i></a></h1>
+             <h1><a href="#" data-reveal-id="new-course"><i class="fi-pencil"></i></a></h1>
+             <%= render "courses/new"%>
         </li>
         <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
         </li>
