added delete course method and link, + fixed seeds file

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -57,6 +57,7 @@ Course at a Glance [reviews//views//enrollments//upvotes//hours per section] -->
 
     <div class="row">
       <div class="small-9 columns">
+        <%= link_to "Delete Course", course_path, method: :delete %>
       ---------------------------</br>
       Needs to add reviews
       </div>
