courses page stylin

--- a/app/assets/javascripts/templates/contents.hbs
+++ b/app/assets/javascripts/templates/contents.hbs
@@ -1,4 +1,4 @@
-<div id ="content_div" class="content">
+<div id="content_div" class="content-hbs">
   <div>{{source_url}}</div>
   <div>{{text}}</div>
   <div class="edit-delete-icons">
