--- a/app/assets/stylesheets/content.scss
+++ b/app/assets/stylesheets/content.scss
@@ -124,7 +124,7 @@ footer  {
 ///////////////////////Content edit
 ///////////////////////////////////
 
-.content {
+.content-hbs {
   text-align: center;
 }
 
