--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -8,18 +8,28 @@
 }
 
 .min-row-height {
-  min-height: 100%;
+  height: 100%;
 }
 
 .show-container {
   background: white;
   box-shadow: rgba(0,0,0,.08) 0 1px 5px;
+  padding: 20px 10px 20px 10px;
+  margin-bottom: 15px
+}
 
+.course-img {
+  width: 50px;
 }
 
 .page-title{
-  padding: 40px 0 10px 0 ;
+  padding: 40px 20px 10px 0px ;
+  text-transform:uppercase;
+  font-weight: 400;
+  font-size: 1.2rem;
+  margin-bottom: 50px;
 }
+
 
 .add-course {
   text-align: right;
@@ -38,6 +48,14 @@ color: black;
   display: none;
 }
 
-.remove-sideways-scroll {
-  width: 100%
+
+.tabs.vertical  {
+  width: 50%;
 }
+
+.img-column {
+  text-align: center;
+  margin-top: 5px;
+
+}
+
