--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,14 +1,14 @@
-<div class="row">
-  <div class="small-10 medium-9 large-8 small-centered columns show-container">
+
+  <div class="small-11 medium-10 large-10 small-centered columns">
 
     <div class="page-title">
       <%= current_user.name %>'s Courses 
     </div>
 
     <div class="row">
-      <div class="small-12 medium-11 large-10 small-centered columns">
+      <div class="small-12 medium-3 large-3 columns">
 
-        <dl id="course-tabs" class="tabs" data-tab>
+        <dl id="course-tabs" class="tabs vertical" data-tab>
             <dd class="active"><a href="#created">
               Created
             </a></dd>
@@ -20,45 +20,48 @@
             <%= render "new"%>
           </div>
         </dl>
-
       </div>
-    </div>
 
-    <div class="row max-row-height">
-      <div class="small-12 medium-11 large-10 small-centered columns min-row-height">
+      <div class="small-12 medium-10 large-9 columns ">
+        <div class="tabs-content vertical row-height">
 
-        <div class="tabs-content row-height">
-          <div class="content active tab-contents min-row-height" id="created">
-            <% @created_courses.each do |course| %>
-              <div class="row min-row-height" id="row-height">
-                <div class="small-12 medium-11 large-10 small-centered columns min-row-height">
-                  <a href="/courses/<%= course.id%>">
-                    <h3><%= course.title %></h3>
-                    <p><%= course.description %></p>
-                  </a>
-                </div>
+            <div class="content active tab-contents min-row-height" id="created">
+              <% @created_courses.each do |c_course| %>
+                <div class="small-12 columns show-container">
+                <a href="/courses/<%= c_course.id%>">
+                  <div class="small-2 columns img-column">
+                    <p><%= image_tag(c_course.category.img, class: "course-img")%></p>
+                  </div>
+                  <div class="small-10 columns">
+                    <h3><%= c_course.title %></h3>
+                    <p><%= c_course.description %></p>
+                  </div>
+                </a>
+              </div>
+              <% end %>
+            </div>
+
+          <div class="content tab-contents min-row-height" id="enrolled">
+            <% @enrolled_courses.each do |e_course| %>
+             <div class="small-12 columns show-container">
+                <a href="/courses/<%= e_course.id%>">
+                  <div class="small-2 columns img-column">
+                    <p><%= image_tag(e_course.category.img, class: "course-img")%></p>
+                  </div>
+                  <div class="small-10 columns">
+                    <h3><%= e_course.title %></h3>
+                    <p><%= e_course.description %></p>
+                  </div>
+                </a>
               </div>
             <% end %>
           </div>
-          <div class="content tab-contents" id="enrolled">
-            <% @enrolled_courses.each do |course| %>
-              <div class="row" id="row-height">
-                <div class="small-12 medium-11 large-10 small-centered columns">
-                  <a href="/courses/<%= course.id%>">
-                    <h3><%= course.title %></h3>
-                    <p><%= course.description %></p>
-                  </a>
-                </div>
-              </div>
-            <% end %>
-          </div>
-        </div>
-     
-    </div>
+        </div>    
+      </div>
+
     </div>
 
   </div>
-</div>
 
 <!-- -- 
 Created Courses (view @created)
